--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,3 +7,9 @@
     "axios": "^0.21.1"
   }
 }
+"scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+}
