--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,35 @@
 {
-  "name": "cloud-cost-estimator-frontend",
+  "name": "cloud-cost-estimator",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "axios": "^0.21.1"
-  }
-}
-"scripts": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
+    // add other dependencies here
+  },
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
